# Image-Captioning

./: README.md  pyproject.toml
src/: config.py  main.py
src/generators/: caption_generator.py
src/interface/: gradio_interface.py
src/models/: model.py
src/utils/: utils.py
