[tool.poetry]
name = "image-captioning"
version = "0.1.0"
description = "An image captioning project designed to automatically generate textual description for images."
authors = ["Shuvham <shuvham2003.sg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.45.2"
gradio = "^4.44.1"
pillow = "^10.4.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
huggingface-hub = "^0.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
